# pikoPD

./: LICENSE  README.md  board.json  index.html  main.cpp  pikopd.py  settings.json
.github/: funding.yml
HVCC-pikoPD/: README.md  main.cpp  main.cpp.j2  pikoPDuploader.py  pikopd.py  settings.json
HVCC-pikoPD/PdPatches/: heavy.pd
HVCC-pikoPD/src/: CMakeLists.txt  cdc_stdio_lib.c  tusb_config.h  usb_descriptors.c
arduino/ctlout/hv_param_pot/: hv_param_pot.ino
arduino/rain/: README.md  rain.html
docs/: manual.md
lib/pico-distance-sensor/: HC-SR04smoothing.h
lib/pico-distance-sensor/src/: distance_sensor.cpp  sensor.pio
lib/pico-w-webserver/: CMakeLists.txt  htmldata.c  main.c
lib/pico-w-webserver/html_files/: index.shtml
patches/: cny70_theremin.pd  distance_sensor.pd  encoder.pd  heavy.pd  monosynth-delay.pd  monosynth.pd  netsend.pd  oscNetsendReceive.pd  poly_custom.pd  poly_notein.pd  sample_drums_MPR121.pd  web.pd
picopd-hvcc/: README.md  main.cpp  pikopd.py  settings.json
picopd-hvcc/docs/: manual.md
picopd-hvcc/patches/: heavy.pd
picopd-hvcc/src/: CMakeLists.txt  PicoControl.cpp  PicoControl.h  PicoControl.hpp  atomic_stubs.cpp  usb_descriptors.c
polyphony/voice_alocation_example/: voice_alocation_example.ino
rain/: rainPICOPD2040.uf2
src/: CMakeLists.txt  HC-SR04.h  Keypad.cpp  Keypad.h  MPR121.h  PicoAudio.h  PicoControl.cpp  PicoControl.h  PicoMIDI.h  PicoSCREEN.h  PicoWEB.h  htmldata.c  lwipopts.h  picoOSC.h  ssd1306.h  tusb_config.h  usb_descriptors.c  ws2812.pio
src/masterfx/: freeverb.h
src/sensors/: HC-SR04.h  HXB710.h
src/usb/: cdc_stdio_lib.c  cdc_stdio_lib.h
src/web/: lwipopts.h
templates/: arduinoPikoPD.ino  main.cpp  mainAP-mode.ccp  mainDisplay.cpp
tools/: oscNetsendReceive.pd
usb_midi_host/: usb_midi_host.ino
